--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
               <use xlink:href="images/icons.svg#icon-1"></use>
             </svg>
             <li class="icon-shadow">
-              <svg class="dash-icon">
+              <svg class="shadow">
                 <use xlink:href="images/icons.svg#icon-1-shadow"></use>
               </svg>
-
             </li>
 
 
