--- a/index.html
+++ b/index.html
@@ -13,36 +13,37 @@
 <body>
   <main>
     <div class="welcome grid margin-auto">
+
       <div class="cards">
         <p class="title">Total Trial</p>
         <ul class="flex justify-between align-center">
           <p class="numeric">280</p>
           <div class="icon">
             <svg class="dash-icon"">
-              <use xlink:href="images/icons.svg#icon-1""></use>
+              <use xlink:href=" images/icons.svg#icon-1""></use>
             </svg>
             <li class=" icon-shadow">
 
-                <svg width="67" height="49" viewBox="0 0 67 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <g filter="url(#filter0_f_47_1378)">
-                    <path
-                      d="M13.1885 21.2994C10.058 33.8216 7.64483 26.517 6.82959 21.2994V42.0047H60.1466V18.8537C59.8205 19.6689 58.9726 21.6907 58.19 23.256C57.2117 25.2126 56.2334 24.7234 55.2551 23.7451C54.2768 22.7668 53.2985 23.256 52.3202 23.7451C50.7549 24.1364 49.7114 22.9299 49.3853 22.2777C48.8962 18.0384 47.9179 9.36423 47.9179 8.5816C47.9179 7.6033 46.9396 6.13586 45.4722 7.6033C42.0481 12.0056 41.559 18.8537 41.0698 23.256C40.0915 26.68 38.6241 22.7668 38.135 19.832C37.6458 16.8971 35.6892 17.3862 34.2218 18.8537C32.7544 20.3211 31.7761 19.832 31.2869 18.8537C30.7978 17.8754 29.8195 16.8971 27.8629 17.3862C25.9063 17.8754 25.9063 18.3645 24.4389 14.4514C22.9714 10.5382 22.4823 12.4948 21.0148 15.9188C19.5474 19.3428 19.0583 18.8537 17.5908 15.9188C16.1234 12.0056 15.6342 14.4514 13.1885 21.2994Z"
-                      fill="url(#paint0_linear_47_1378)" fill-opacity="0.6" />
-                  </g>
-                  <defs>
-                    <filter id="filter0_f_47_1378" x="0.82959" y="0.982492" width="65.3169" height="47.0222" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                      <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                      <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                      <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1378" />
-                    </filter>
-                    <linearGradient id="paint0_linear_47_1378" x1="33.4881" y1="6.98249" x2="33.4881" y2="42.0047" gradientUnits="userSpaceOnUse">
-                      <stop stop-color="#017BFF" />
-                      <stop offset="0.833333" stop-color="#017BFF" stop-opacity="0" />
-                    </linearGradient>
-                  </defs>
-                </svg>
+              <svg width="67" height="49" viewBox="0 0 67 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_f_47_1378)">
+                  <path
+                    d="M13.1885 21.2994C10.058 33.8216 7.64483 26.517 6.82959 21.2994V42.0047H60.1466V18.8537C59.8205 19.6689 58.9726 21.6907 58.19 23.256C57.2117 25.2126 56.2334 24.7234 55.2551 23.7451C54.2768 22.7668 53.2985 23.256 52.3202 23.7451C50.7549 24.1364 49.7114 22.9299 49.3853 22.2777C48.8962 18.0384 47.9179 9.36423 47.9179 8.5816C47.9179 7.6033 46.9396 6.13586 45.4722 7.6033C42.0481 12.0056 41.559 18.8537 41.0698 23.256C40.0915 26.68 38.6241 22.7668 38.135 19.832C37.6458 16.8971 35.6892 17.3862 34.2218 18.8537C32.7544 20.3211 31.7761 19.832 31.2869 18.8537C30.7978 17.8754 29.8195 16.8971 27.8629 17.3862C25.9063 17.8754 25.9063 18.3645 24.4389 14.4514C22.9714 10.5382 22.4823 12.4948 21.0148 15.9188C19.5474 19.3428 19.0583 18.8537 17.5908 15.9188C16.1234 12.0056 15.6342 14.4514 13.1885 21.2994Z"
+                    fill="url(#paint0_linear_47_1378)" fill-opacity="0.6" />
+                </g>
+                <defs>
+                  <filter id="filter0_f_47_1378" x="0.82959" y="0.982492" width="65.3169" height="47.0222" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1378" />
+                  </filter>
+                  <linearGradient id="paint0_linear_47_1378" x1="33.4881" y1="6.98249" x2="33.4881" y2="42.0047" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#017BFF" />
+                    <stop offset="0.833333" stop-color="#017BFF" stop-opacity="0" />
+                  </linearGradient>
+                </defs>
+              </svg>
 
-                </li>
+            </li>
           </div>
           <div class="status grid">
 
@@ -59,6 +60,149 @@
           </div>
         </ul>
       </div>
+
+      <div class="cards">
+        <p class="title">Ongoing Trial</p>
+        <ul class="flex justify-between align-center">
+          <p class="numeric">150</p>
+          <div class="icon">
+            <svg class="dash-icon"">
+              <use xlink:href=" images/icons.svg#icon-2""></use>
+            </svg>
+            <li class=" icon-shadow">
+
+              <svg width="72" height="40" viewBox="0 0 72 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_f_47_1390)">
+                  <path
+                    d="M7.29313 15.7163C7.29313 16.63 6.54004 17.1939 6.54004 17.9755V33.2883H65.7831L64.2769 6.17712C64.2769 10.4765 62.5655 14.5825 61.1251 18.5334C60.4305 20.4384 59.8454 22.2668 59.0192 24.1257C58.5857 25.1011 58.0757 27.4815 56.997 27.9609C55.7264 28.5256 55.4908 25.9625 55.4908 25.2693C55.4908 22.0932 54.7299 18.2182 53.0363 15.521C52.0667 13.9768 50.9482 16.0497 50.7213 16.9575C50.5495 17.6447 50.0135 18.1504 49.8427 18.8681C49.688 19.5179 49.8567 20.2205 49.6893 20.8484C49.3262 22.2098 48.7934 23.7419 47.2626 24.1955C46.8726 24.3111 45.876 22.6778 45.4636 22.3685C44.6524 21.7601 44.4097 21.741 43.3298 21.741C42.0507 21.741 41.4891 21.8833 41.4332 20.43C41.3911 19.3358 40.5473 17.3575 39.9549 16.5112C39.3228 15.6082 38.858 13.8999 38.6718 12.8294C38.4864 11.7633 37.4739 10.0218 36.6078 9.32894C35.8725 8.74071 35.5436 6.82965 34.5996 7.87854C34.0009 8.5438 33.0894 9.01451 32.5356 9.71943C31.6079 10.9 30.8186 12.1337 29.7463 13.206C29.2347 13.7176 27.7303 15.4949 26.999 15.0887C26.2404 14.6673 26.479 13.5242 25.9809 12.9549C24.6113 11.3897 22.4243 10.6712 21.1555 12.9549C20.2455 14.5931 17.8003 16.9741 15.9676 17.585C14.2506 18.1573 13.1821 16.3486 12.2022 15.0887C11.101 13.6729 11.5555 11.4596 9.80343 10.3888C8.69519 9.71159 8.89582 9.58291 7.90676 10.4307C7.18912 11.0458 7.29313 11.8169 7.29313 12.7039V15.7163Z"
+                    fill="url(#paint0_linear_47_1390)" fill-opacity="0.6" />
+                </g>
+                <defs>
+                  <filter id="filter0_f_47_1390" x="0.540039" y="0.17712" width="71.2432" height="39.1112" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1390" />
+                  </filter>
+                  <linearGradient id="paint0_linear_47_1390" x1="36.1616" y1="6.17712" x2="36.1616" y2="33.2883" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#FC794C" />
+                    <stop offset="0.796875" stop-color="#FE4100" stop-opacity="0" />
+                  </linearGradient>
+                </defs>
+              </svg>
+
+
+            </li>
+          </div>
+          <div class="status grid">
+
+            <div class="left">
+              <p class="subtitle">Lorem Ipsum</p>
+              <p>20</p>
+            </div>
+
+            <div class="right">
+              <p class="subtitle">Lorem Ipsum</p>
+              <p>50</p>
+            </div>
+
+          </div>
+        </ul>
+      </div>
+
+      <div class="cards">
+        <p class="title">Total Trial</p>
+        <ul class="flex justify-between align-center">
+          <p class="numeric">280</p>
+          <div class="icon">
+            <svg class="dash-icon"">
+              <use xlink:href=" images/icons.svg#icon-1""></use>
+            </svg>
+            <li class=" icon-shadow">
+
+              <svg width="67" height="49" viewBox="0 0 67 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_f_47_1378)">
+                  <path
+                    d="M13.1885 21.2994C10.058 33.8216 7.64483 26.517 6.82959 21.2994V42.0047H60.1466V18.8537C59.8205 19.6689 58.9726 21.6907 58.19 23.256C57.2117 25.2126 56.2334 24.7234 55.2551 23.7451C54.2768 22.7668 53.2985 23.256 52.3202 23.7451C50.7549 24.1364 49.7114 22.9299 49.3853 22.2777C48.8962 18.0384 47.9179 9.36423 47.9179 8.5816C47.9179 7.6033 46.9396 6.13586 45.4722 7.6033C42.0481 12.0056 41.559 18.8537 41.0698 23.256C40.0915 26.68 38.6241 22.7668 38.135 19.832C37.6458 16.8971 35.6892 17.3862 34.2218 18.8537C32.7544 20.3211 31.7761 19.832 31.2869 18.8537C30.7978 17.8754 29.8195 16.8971 27.8629 17.3862C25.9063 17.8754 25.9063 18.3645 24.4389 14.4514C22.9714 10.5382 22.4823 12.4948 21.0148 15.9188C19.5474 19.3428 19.0583 18.8537 17.5908 15.9188C16.1234 12.0056 15.6342 14.4514 13.1885 21.2994Z"
+                    fill="url(#paint0_linear_47_1378)" fill-opacity="0.6" />
+                </g>
+                <defs>
+                  <filter id="filter0_f_47_1378" x="0.82959" y="0.982492" width="65.3169" height="47.0222" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1378" />
+                  </filter>
+                  <linearGradient id="paint0_linear_47_1378" x1="33.4881" y1="6.98249" x2="33.4881" y2="42.0047" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#017BFF" />
+                    <stop offset="0.833333" stop-color="#017BFF" stop-opacity="0" />
+                  </linearGradient>
+                </defs>
+              </svg>
+
+            </li>
+          </div>
+          <div class="status grid">
+
+            <div class="left">
+              <p class="subtitle">In Progress</p>
+              <p>150</p>
+            </div>
+
+            <div class="right">
+              <p class="subtitle">Pending</p>
+              <p>10</p>
+            </div>
+
+          </div>
+        </ul>
+      </div>
+
+      <div class="cards">
+        <p class="title">Total Trial</p>
+        <ul class="flex justify-between align-center">
+          <p class="numeric">280</p>
+          <div class="icon">
+            <svg class="dash-icon"">
+              <use xlink:href=" images/icons.svg#icon-1""></use>
+            </svg>
+            <li class=" icon-shadow">
+
+              <svg width="67" height="49" viewBox="0 0 67 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_f_47_1378)">
+                  <path
+                    d="M13.1885 21.2994C10.058 33.8216 7.64483 26.517 6.82959 21.2994V42.0047H60.1466V18.8537C59.8205 19.6689 58.9726 21.6907 58.19 23.256C57.2117 25.2126 56.2334 24.7234 55.2551 23.7451C54.2768 22.7668 53.2985 23.256 52.3202 23.7451C50.7549 24.1364 49.7114 22.9299 49.3853 22.2777C48.8962 18.0384 47.9179 9.36423 47.9179 8.5816C47.9179 7.6033 46.9396 6.13586 45.4722 7.6033C42.0481 12.0056 41.559 18.8537 41.0698 23.256C40.0915 26.68 38.6241 22.7668 38.135 19.832C37.6458 16.8971 35.6892 17.3862 34.2218 18.8537C32.7544 20.3211 31.7761 19.832 31.2869 18.8537C30.7978 17.8754 29.8195 16.8971 27.8629 17.3862C25.9063 17.8754 25.9063 18.3645 24.4389 14.4514C22.9714 10.5382 22.4823 12.4948 21.0148 15.9188C19.5474 19.3428 19.0583 18.8537 17.5908 15.9188C16.1234 12.0056 15.6342 14.4514 13.1885 21.2994Z"
+                    fill="url(#paint0_linear_47_1378)" fill-opacity="0.6" />
+                </g>
+                <defs>
+                  <filter id="filter0_f_47_1378" x="0.82959" y="0.982492" width="65.3169" height="47.0222" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1378" />
+                  </filter>
+                  <linearGradient id="paint0_linear_47_1378" x1="33.4881" y1="6.98249" x2="33.4881" y2="42.0047" gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#017BFF" />
+                    <stop offset="0.833333" stop-color="#017BFF" stop-opacity="0" />
+                  </linearGradient>
+                </defs>
+              </svg>
+
+            </li>
+          </div>
+          <div class="status grid">
+
+            <div class="left">
+              <p class="subtitle">In Progress</p>
+              <p>150</p>
+            </div>
+
+            <div class="right">
+              <p class="subtitle">Pending</p>
+              <p>10</p>
+            </div>
+
+          </div>
+        </ul>
+      </div>
+
     </div>
   </main>
   <section>
