--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@
     </div>
 
     <section class="project-status">
-      <div class="flex  justify-between">
+      <div class="flex  justify-between alig-center">
         <p>Status of Top Projects</p>
-        <ul class="phases flex">
+        <ul class="phases flex gap-20">
           <li>
-            <p class="">Phase 1</p>
+            <p class="flex align-center gap-6">Phase 1</p>
           </li>
           <li>
-            <p class="">Phase 2</p>
+            <p class="flex align-center gap-6">Phase 2</p>
           </li>
           <li>
-            <p class="">Phase 3</p>
+            <p class="flex align-center gap-6">Phase 3</p>
           </li>
         </ul>
       </div>
@@ -556,6 +556,11 @@
     </svg>
 
   </main>
+
+  <!-- Font Awesome Script -->
+  <script src="https://kit.fontawesome.com/c5f7035045.js" crossorigin="anonymous">
+  </script>
+
 </body>
 
 </html>
