--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     </div>
 
     <section class="project-status">
-      <div class="flex  justify-between alig-center">
-        <p>Status of Top Projects</p>
+      <div class="upper flex justify-between align-center">
+        <p class="title">Status of Top Projects</p>
         <ul class="phases flex gap-20">
           <li>
             <p class="flex align-center gap-6">Phase 1</p>
@@ -230,6 +230,153 @@
             <p class="flex align-center gap-6">Phase 3</p>
           </li>
         </ul>
+      </div>
+      <div class="cards-container grid gap-20">
+
+        <div class="cards">
+
+          <div class="flex justify-start gap-20">
+
+            <div class="circle one flex align-center justify-center">
+              <p>100%</p>
+            </div>
+
+            <div class="data flex justify-between align-center">
+
+              <div class="left">
+                <p>Covid</p>
+                <p class="subtitle">Completed Records</p>
+              </div>
+
+              <div class="right">
+                <p class="records">37<span>/37</span></p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="cards">
+
+          <div class="flex justify-start gap-20">
+
+            <div class="circle two flex align-center justify-center">
+              <p>50%</p>
+            </div>
+
+            <div class="data flex justify-between align-center">
+
+              <div class="left">
+                <p>Breast Cancer</p>
+                <p class="subtitle">Completed Records</p>
+              </div>
+
+              <div class="right">
+                <p class="records">18<span>/37</span></p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="cards">
+
+          <div class="flex justify-start gap-20">
+
+            <div class="circle three flex align-center justify-center">
+              <p>70%</p>
+            </div>
+
+            <div class="data flex justify-between align-center">
+
+              <div class="left">
+                <p>Diabetes Mellites</p>
+                <p class="subtitle">Completed Records</p>
+              </div>
+
+              <div class="right">
+                <p class="records">28<span>/37</span></p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="cards">
+
+          <div class="flex justify-start gap-20">
+
+            <div class="circle four flex align-center justify-center">
+              <p>64%</p>
+            </div>
+
+            <div class="data flex justify-between align-center">
+
+              <div class="left">
+                <p>Tumor</p>
+                <p class="subtitle">Completed Records</p>
+              </div>
+
+              <div class="right">
+                <p class="records">23<span>/37</span></p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="cards">
+
+          <div class="flex justify-start gap-20">
+
+            <div class="circle five flex align-center justify-center">
+              <p>38%</p>
+            </div>
+
+            <div class="data flex justify-between align-center">
+
+              <div class="left">
+                <p>E10-E14</p>
+                <p class="subtitle">Completed Records</p>
+              </div>
+
+              <div class="right">
+                <p class="records">11<span>/37</span></p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="cards">
+
+          <div class="flex justify-start gap-20">
+
+            <div class="circle six flex align-center justify-center">
+              <p>49%</p>
+            </div>
+
+            <div class="data flex justify-between align-center">
+
+              <div class="left">
+                <p>Atrophic Gastritic</p>
+                <p class="subtitle">Completed Records</p>
+              </div>
+
+              <div class="right">
+                <p class="records">21<span>/37</span></p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
