--- a/index.html
+++ b/index.html
@@ -19,31 +19,7 @@
         <ul class="flex justify-between align-center">
           <p class="numeric">280</p>
           <div class="icon">
-            <svg class="dash-icon"">
-              <use xlink:href=" images/icons.svg#icon-1""></use>
-            </svg>
-            <li class=" icon-shadow">
-
-              <svg width="67" height="49" viewBox="0 0 67 49" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_f_47_1378)">
-                  <path
-                    d="M13.1885 21.2994C10.058 33.8216 7.64483 26.517 6.82959 21.2994V42.0047H60.1466V18.8537C59.8205 19.6689 58.9726 21.6907 58.19 23.256C57.2117 25.2126 56.2334 24.7234 55.2551 23.7451C54.2768 22.7668 53.2985 23.256 52.3202 23.7451C50.7549 24.1364 49.7114 22.9299 49.3853 22.2777C48.8962 18.0384 47.9179 9.36423 47.9179 8.5816C47.9179 7.6033 46.9396 6.13586 45.4722 7.6033C42.0481 12.0056 41.559 18.8537 41.0698 23.256C40.0915 26.68 38.6241 22.7668 38.135 19.832C37.6458 16.8971 35.6892 17.3862 34.2218 18.8537C32.7544 20.3211 31.7761 19.832 31.2869 18.8537C30.7978 17.8754 29.8195 16.8971 27.8629 17.3862C25.9063 17.8754 25.9063 18.3645 24.4389 14.4514C22.9714 10.5382 22.4823 12.4948 21.0148 15.9188C19.5474 19.3428 19.0583 18.8537 17.5908 15.9188C16.1234 12.0056 15.6342 14.4514 13.1885 21.2994Z"
-                    fill="url(#paint0_linear_47_1378)" fill-opacity="0.6" />
-                </g>
-                <defs>
-                  <filter id="filter0_f_47_1378" x="0.82959" y="0.982492" width="65.3169" height="47.0222" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1378" />
-                  </filter>
-                  <linearGradient id="paint0_linear_47_1378" x1="33.4881" y1="6.98249" x2="33.4881" y2="42.0047" gradientUnits="userSpaceOnUse">
-                    <stop stop-color="#017BFF" />
-                    <stop offset="0.833333" stop-color="#017BFF" stop-opacity="0" />
-                  </linearGradient>
-                </defs>
-              </svg>
-
-            </li>
+            <img src="images/icon-1.png" alt="icon-1">
           </div>
           <div class="status grid">
 
@@ -231,6 +207,7 @@
           </li>
         </ul>
       </div>
+
       <div class="cards-container grid gap-20">
 
         <div class="cards">
@@ -378,8 +355,10 @@
         </div>
 
       </div>
+
     </section>
   </main>
+
   <main class="text-center">
     <svg width="947" height="404" viewBox="0 0 947 404" fill="none" xmlns="http://www.w3.org/2000/svg">
       <rect opacity="0.1" x="1" y="1" width="222.914" height="142.585" rx="6" stroke="white" />
