--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 <body>
   <main>
-    <div class="welcome grid">
+    <div class="welcome flex">
 
       <div class="cards">
         <p class="title">Total Trial</p>
-        <ul class="flex justify-between align-center">
+        <ul class="flex justify-between align-center gap-6">
           <p class="numeric">280</p>
           <div class="icon">
             <img src="images/icon-1.png" alt="icon-1">
           </div>
-          <div class="status grid">
+          <div class="status grid gap-6">
 
             <div class="left">
               <p class="subtitle">In Progress</p>
@@ -39,40 +39,12 @@
 
       <div class="cards">
         <p class="title">Ongoing Trial</p>
-        <ul class="flex justify-between align-center">
+        <ul class="flex justify-between align-center gap-6">
           <p class="numeric">150</p>
           <div class="icon">
-            <svg width="61" height="25" viewBox="0 0 61 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1.54004 12.9755C1.54004 12.1939 2.29313 11.63 2.29313 10.7163C2.29313 9.71213 2.29313 8.70801 2.29313 7.70389C2.29313 6.8169 2.18912 6.04579 2.90676 5.43068C3.89582 4.58291 3.69519 4.71159 4.80343 5.38884C6.55554 6.45958 6.10096 8.67285 7.20215 10.0887C8.18207 11.3486 9.25064 13.1573 10.9676 12.585C12.8003 11.9741 15.2455 9.59309 16.1555 7.95492C17.4243 5.67123 19.6113 6.38966 20.9809 7.95492C21.479 8.52424 21.2405 9.66728 21.999 10.0887C22.7303 10.4949 24.2347 8.71762 24.7463 8.20595C25.8186 7.13374 26.6079 5.90004 27.5356 4.71943C28.0894 4.01451 29.0009 3.5438 29.5996 2.87854C30.5436 1.82965 30.8725 3.74071 31.6078 4.32894C32.4739 5.02178 33.4864 6.7633 33.6718 7.82941C33.858 8.89987 34.3228 10.6082 34.9549 11.5112C35.5473 12.3575 36.3911 14.3358 36.4332 15.43C36.4891 16.8833 37.0507 16.741 38.3298 16.741C39.4097 16.741 39.6524 16.7601 40.4636 17.3685C40.876 17.6778 41.8726 19.3111 42.2626 19.1955C43.7934 18.7419 44.3262 17.2098 44.6893 15.8484C44.8567 15.2205 44.688 14.5179 44.8427 13.8681C45.0135 13.1504 45.5495 12.6447 45.7213 11.9575C45.9482 11.0497 47.0667 8.97682 48.0363 10.521C49.7299 13.2182 50.4908 17.0932 50.4908 20.2693C50.4908 20.9625 50.7264 23.5256 51.997 22.9609C53.0757 22.4815 53.5857 20.1011 54.0192 19.1257C54.8454 17.2668 55.4305 15.4384 56.1251 13.5334C57.5655 9.58253 59.2769 5.47652 59.2769 1.17712"
-                stroke="#FC794C" stroke-width="2" stroke-linecap="round" />
-            </svg>
-
-            <li class=" icon-shadow">
-
-              <svg width="72" height="40" viewBox="0 0 72 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_f_47_1390)">
-                  <path
-                    d="M7.29313 15.7163C7.29313 16.63 6.54004 17.1939 6.54004 17.9755V33.2883H65.7831L64.2769 6.17712C64.2769 10.4765 62.5655 14.5825 61.1251 18.5334C60.4305 20.4384 59.8454 22.2668 59.0192 24.1257C58.5857 25.1011 58.0757 27.4815 56.997 27.9609C55.7264 28.5256 55.4908 25.9625 55.4908 25.2693C55.4908 22.0932 54.7299 18.2182 53.0363 15.521C52.0667 13.9768 50.9482 16.0497 50.7213 16.9575C50.5495 17.6447 50.0135 18.1504 49.8427 18.8681C49.688 19.5179 49.8567 20.2205 49.6893 20.8484C49.3262 22.2098 48.7934 23.7419 47.2626 24.1955C46.8726 24.3111 45.876 22.6778 45.4636 22.3685C44.6524 21.7601 44.4097 21.741 43.3298 21.741C42.0507 21.741 41.4891 21.8833 41.4332 20.43C41.3911 19.3358 40.5473 17.3575 39.9549 16.5112C39.3228 15.6082 38.858 13.8999 38.6718 12.8294C38.4864 11.7633 37.4739 10.0218 36.6078 9.32894C35.8725 8.74071 35.5436 6.82965 34.5996 7.87854C34.0009 8.5438 33.0894 9.01451 32.5356 9.71943C31.6079 10.9 30.8186 12.1337 29.7463 13.206C29.2347 13.7176 27.7303 15.4949 26.999 15.0887C26.2404 14.6673 26.479 13.5242 25.9809 12.9549C24.6113 11.3897 22.4243 10.6712 21.1555 12.9549C20.2455 14.5931 17.8003 16.9741 15.9676 17.585C14.2506 18.1573 13.1821 16.3486 12.2022 15.0887C11.101 13.6729 11.5555 11.4596 9.80343 10.3888C8.69519 9.71159 8.89582 9.58291 7.90676 10.4307C7.18912 11.0458 7.29313 11.8169 7.29313 12.7039V15.7163Z"
-                    fill="url(#paint0_linear_47_1390)" fill-opacity="0.6" />
-                </g>
-                <defs>
-                  <filter id="filter0_f_47_1390" x="0.540039" y="0.17712" width="71.2432" height="39.1112" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1390" />
-                  </filter>
-                  <linearGradient id="paint0_linear_47_1390" x1="36.1616" y1="6.17712" x2="36.1616" y2="33.2883" gradientUnits="userSpaceOnUse">
-                    <stop stop-color="#FC794C" />
-                    <stop offset="0.796875" stop-color="#FE4100" stop-opacity="0" />
-                  </linearGradient>
-                </defs>
-              </svg>
-
-
-            </li>
+            <img src="images/icon-2.png" alt="icon-2">
           </div>
-          <div class="status grid">
+          <div class="status grid gap-6">
 
             <div class="left">
               <p class="subtitle">Lorem Ipsum</p>
@@ -90,40 +62,12 @@
 
       <div class="cards">
         <p class="title">Patients</p>
-        <ul class="flex justify-between align-center">
+        <ul class="flex justify-between align-center gap-6">
           <p class="numeric">1200</p>
           <div class="icon">
-            <svg width="59" height="30" viewBox="0 0 59 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1.52881 9.89277C2.03087 6.71306 3.83828 2.26146 7.05146 9.89277C11.57 17.9257 13.0762 21.9422 17.0927 15.9175C21.1091 9.89277 24.1215 11.3989 25.6277 15.9175C26.1297 18.4278 27.1338 19.934 28.64 15.9175C29.845 12.7043 31.485 6.211 32.1544 3.36599C32.4891 1.69246 33.4598 -0.650483 34.6647 3.36599C35.8697 7.38247 37.175 12.7378 37.6771 14.9134C38.8486 16.9216 41.4927 20.3356 42.6977 17.9257C44.2039 14.9134 45.208 12.4031 46.2121 15.9175C47.2162 19.4319 48.7224 22.4443 49.7265 23.4484C50.7306 24.4525 52.2368 25.9587 52.7389 23.4484C53.1405 21.4401 53.5756 17.591 53.743 15.9175C54.4124 14.746 55.8516 13.608 56.2533 18.4278C56.6549 23.2476 57.0901 27.7996 57.2574 29.4731"
-                stroke="#00BCFF" stroke-width="2" />
-            </svg>
-
-            <li class=" icon-shadow">
-
-              <svg width="69" height="45" viewBox="0 0 69 45" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_f_47_1398)">
-                  <path
-                    d="M12.0515 14.8928C8.83828 7.26146 7.03087 11.7131 6.52881 14.8928V38.7822H62.2574V34.4731C62.0901 32.7996 61.6549 28.2476 61.2533 23.4278C60.8517 18.608 59.4124 19.746 58.743 20.9175C58.5756 22.591 58.1405 26.4401 57.7389 28.4484C57.2368 30.9587 55.7306 29.4525 54.7265 28.4484C53.7224 27.4443 52.2162 24.4319 51.2121 20.9175C50.208 17.4031 49.2039 19.9134 47.6977 22.9257C46.4927 25.3356 43.8486 21.9216 42.6771 19.9134C42.175 17.7378 40.8697 12.3825 39.6647 8.36599C38.4598 4.34952 37.4891 6.69246 37.1544 8.36599C36.485 11.211 34.845 17.7043 33.64 20.9175C32.1338 24.934 31.1297 23.4278 30.6277 20.9175C29.1215 16.3989 26.1091 14.8928 22.0927 20.9175C18.0762 26.9422 16.57 22.9257 12.0515 14.8928Z"
-                    fill="url(#paint0_linear_47_1398)" fill-opacity="0.6" />
-                </g>
-                <defs>
-                  <filter id="filter0_f_47_1398" x="0.528809" y="0.148289" width="67.7285" height="44.6339" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1398" />
-                  </filter>
-                  <linearGradient id="paint0_linear_47_1398" x1="34.3931" y1="6.14829" x2="34.3931" y2="38.7822" gradientUnits="userSpaceOnUse">
-                    <stop stop-color="#00BCFF" />
-                    <stop offset="0.869792" stop-color="#00BCFF" stop-opacity="0" />
-                  </linearGradient>
-                </defs>
-              </svg>
-
-
-            </li>
+            <img src="images/icon-3.png" alt="icon-3">
           </div>
-          <div class="status grid">
+          <div class="status grid gap-6">
 
             <div class="left">
               <p class="subtitle">New Patients</p>
@@ -141,40 +85,12 @@
 
       <div class="cards">
         <p class="title">Time per Patient</p>
-        <ul class="flex justify-between align-center">
+        <ul class="flex justify-between align-center gap-6">
           <p class="numeric">10 mins</p>
           <div class="icon">
-            <svg width="54" height="24" viewBox="0 0 54 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M1.6582 17.2818C2.66232 13.2653 4.9718 6.03564 6.17674 9.24882C7.68292 13.2653 8.18498 15.2735 10.1932 12.2612C12.2015 9.24882 15.2138 7.24055 16.72 12.2612C17.9249 16.2777 19.2303 19.29 19.7323 20.2941C21.0712 21.9676 23.8492 24.0094 24.2509 18.7879C24.6525 13.5665 26.7612 5.56703 27.7653 2.21997C28.6021 1.0485 30.376 -0.0895035 30.7777 4.73027C31.2797 10.755 31.7818 19.29 34.7941 14.2694C37.8065 9.24882 39.3127 9.24882 40.8188 9.24882C42.325 9.24882 44.8353 9.24882 47.3456 9.24882C49.8559 9.24882 49.8559 11.7591 52.8683 9.24882"
-                stroke="#1DAB2D" stroke-width="2" />
-            </svg>
-
-            <li class=" icon-shadow">
-
-              <svg width="64" height="41" viewBox="0 0 64 41" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_f_47_1410)">
-                  <path
-                    d="M11.1767 14.2488C9.9718 11.0356 7.66232 18.2653 6.6582 22.2818V34.313H57.8683V14.2488C54.8559 16.7591 54.8559 14.2488 52.3456 14.2488H45.8188C44.3127 14.2488 42.8065 14.2488 39.7941 19.2694C36.7818 24.29 36.2797 15.755 35.7777 9.73027C35.376 4.9105 33.6021 6.0485 32.7653 7.21997C31.7612 10.567 29.6525 18.5665 29.2509 23.7879C28.8492 29.0094 26.0712 26.9676 24.7323 25.2941C24.2303 24.29 22.9249 21.2776 21.72 17.2612C20.2138 12.2406 17.2015 14.2488 15.1932 17.2612C13.185 20.2735 12.6829 18.2653 11.1767 14.2488Z"
-                    fill="url(#paint0_linear_47_1410)" fill-opacity="0.6" />
-                </g>
-                <defs>
-                  <filter id="filter0_f_47_1410" x="0.658203" y="0.197716" width="63.21" height="40.1153" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
-                    <feGaussianBlur stdDeviation="3" result="effect1_foregroundBlur_47_1410" />
-                  </filter>
-                  <linearGradient id="paint0_linear_47_1410" x1="32.2632" y1="6.19772" x2="32.2632" y2="34.313" gradientUnits="userSpaceOnUse">
-                    <stop stop-color="#1DAB2D" />
-                    <stop offset="0.817708" stop-color="#1DAB2D" stop-opacity="0" />
-                  </linearGradient>
-                </defs>
-              </svg>
-
-
-            </li>
+            <img src="images/icon-4.png" alt="icon-4">
           </div>
-          <div class="status grid">
+          <div class="status grid gap-6">
 
             <div class="left">
               <p class="subtitle">Lorem</p>
@@ -193,7 +109,7 @@
     </div>
 
     <section class="project-status">
-      <div class="upper flex justify-between align-center">
+      <div class="upper flex justify-between align-center gap-6">
         <p class="title">Status of Top Projects</p>
         <ul class="phases flex gap-20">
           <li>
@@ -208,7 +124,7 @@
         </ul>
       </div>
 
-      <div class="cards-container grid gap-20">
+      <div class="cards-container flex gap-20">
 
         <div class="cards">
 
@@ -218,7 +134,7 @@
               <p>100%</p>
             </div>
 
-            <div class="data flex justify-between align-center">
+            <div class="data flex justify-between align-center gap-6">
 
               <div class="left">
                 <p>Covid</p>
@@ -242,7 +158,7 @@
               <p>50%</p>
             </div>
 
-            <div class="data flex justify-between align-center">
+            <div class="data flex justify-between align-center gap-6">
 
               <div class="left">
                 <p>Breast Cancer</p>
@@ -266,7 +182,7 @@
               <p>70%</p>
             </div>
 
-            <div class="data flex justify-between align-center">
+            <div class="data flex justify-between align-center gap-6">
 
               <div class="left">
                 <p>Diabetes Mellites</p>
@@ -290,7 +206,7 @@
               <p>64%</p>
             </div>
 
-            <div class="data flex justify-between align-center">
+            <div class="data flex justify-between align-center gap-6">
 
               <div class="left">
                 <p>Tumor</p>
@@ -314,7 +230,7 @@
               <p>38%</p>
             </div>
 
-            <div class="data flex justify-between align-center">
+            <div class="data flex justify-between align-center gap-6">
 
               <div class="left">
                 <p>E10-E14</p>
@@ -338,7 +254,7 @@
               <p>49%</p>
             </div>
 
-            <div class="data flex justify-between align-center">
+            <div class="data flex justify-between align-center gap-6">
 
               <div class="left">
                 <p>Atrophic Gastritic</p>
